# Omni-plane-Travels

./: .dev.vars.example  .gitignore  CONTRIBUTING.md  LICENSE  PRIVACY.md  README.md  build.ts  bunfig.toml  index.html  manifest.json  package.json  server.ts  sw.js  tsconfig.json  tsconfig.server.json  wrangler.toml
.github/workflows/: release.yml
docs/: ARCHITECTURE.md  CHANGELOG.md  cloudflare-worker.js  content-policy.md  governance.md  reference-memory-system.md  rule-canvas-workflow-spec.md  tutorial.md
functions/api/: [[route]].ts
migrations/: 0001_init.sql  0002_email_auth.sql  0003_password_login.sql
public/: _headers
scripts/: test-localStorage-shim.ts
src/: App.tsx  global.d.ts  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src-tauri/src/mod_system/: commands.rs  error.rs  mod.rs  package.rs  registry.rs  types.rs  validator.rs
src/__tests__/: dbMigration.test.ts  rateLimiter.test.ts  responseExtractor.test.ts  variableManager.test.ts
src/api/: auxiliaryApi.ts  client.ts  imageGen.ts  imageGenTypes.ts  rateLimiter.ts  types.ts
src/components/: BackgroundMusic.tsx  ErrorBoundary.tsx  SettingsScreen.tsx  UserCenterPage.tsx
src/config/: api.ts  storageKeys.ts
src/constants/: breakpoints.ts  simulationDisplay.tsx
src/context/: GameContext.tsx  UISettingsContext.tsx
src/data/: builtinPresets.ts  modules.ts  worldLoader.ts  worlds-schema.ts  worlds.json
src/engine/: businessExtraction.ts  contextManager.ts  eventBus.ts  macroEngine.ts  pipelineExecutor.ts  pipelineTypes.ts  promptAssembler.ts  responseExtractor.ts  types.ts  useGameEngine.ts  variableExtraction.ts  variableManager.ts  variableStructureDefs.ts  worldPersonality.ts
src/hooks/: useAiFill.ts  useBodyScrollLock.ts  useCharacterHistory.ts  useCharacterPortrait.ts  useGame.ts  useImageGen.ts  useIsMobile.ts  useWizard.ts  (+3 more)
(+444 files in other folders)
